<resources>
    <string name="app_name">directory</string>
    <string name="facebook_app_id">501394247451297</string>
    <string name="fb_login_protocol_scheme">fb501394247451297</string>
    <!-- bottom nav-->
    <string name="home">home</string>
    <string name="me">m</string>
    <string name="profile">profile</string>
    <string name="inbox">inbox</string>
    <string name="discover">discover</string>
    <string name="search">search</string>

    <!--category -->
    <string name="food">food</string>
    <string name="health">health</string>
    <string name="tech">tech</string>
    <string name="events">events</string>

    <!--  signup  -->
    <string name="textview_sign_up">sign up</string>
    <string name="login_button">login</string>
    <string name="register_button">register</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="signout">sign out</string>
    <string name="settings">settings</string>
    <string name="distance">distance</string>
    <string name="search_title">Search</string>
    <string name="search_hint">hint</string>
    <string name="no_results_found">no results found</string>

    <!--  litingItem  -->
    <string name="about">about</string>
    <string name="gallery">Gallery</string>
    <string name="contact">Contact</string>
    <string name="reviews">Reviews</string>
    <string name="facebook">facebook</string>
    <string name="_0_0">0.0</string>
    <string name="socialHeader">Social</string>
    <string name="websiteHeading">website</string>
    <string name="twitterHeading">twitter</string>
    <string name="facebookHeading">facebook</string>
    <string name="fpa_opening_hours">Opening Hours</string>
    <string name="fpa_phone_number">phone number</string>
    <string name="instagram">instagram</string>
    <string name="emailHeading">Email</string>
    <string name="summary_upcoming_events_heading">Upcoming Events</string>
    <string name="no_upcoming_events">no upcoming events</string>
    <string name="offers">Offers</string>
    <string name="detail_price_range">Price Range</string>
    <string name="details_services">services</string>
    <string name="about_us">About Us</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="location">Location</string>
    <string name="number">number</string>
    <string name="click_to_call">click to call</string>
    <string name="business_logo">business logo</string>
    <string name="like_button">like button</string>
    <string name="verified_tick">verified tick</string>
    <string name="visit_site">visit website</string>
    <string name="check_our_instagram">check our instagram</string>
    <string name="follow_us_on_twitter">follow us on twitter</string>
    <string name="about_heading">About</string>
</resources>
