<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pageSummary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/standard_margin">

    <TextView
        android:id="@+id/summaryAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:fontFamily="@font/alegreya"
        android:text="@string/about_us"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/separatorSummary"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/small_margin"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/summaryAbout" />

    <TextView
        android:id="@+id/overviewOpeningHoursHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/fpa_opening_hours"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separatorSummary" />

    <TextView
        android:id="@+id/overviewOpeningHours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:fontFamily="@font/alegreya"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overviewOpeningHoursHeading" />

    <TextView
        android:id="@+id/overviewEventsHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/summary_upcoming_events_heading"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overviewOpeningHours" />

    <TextView
        android:id="@+id/overviewEvents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/no_upcoming_events"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overviewEventsHeading" />

    <TextView
        android:id="@+id/overviewOfferHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/offers"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overviewEvents" />

    <TextView
        android:id="@+id/overviewOffers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/no_results_found"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overviewOpeningHoursHeading" />
</androidx.constraintlayout.widget.ConstraintLayout>