<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pageSocial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/standard_margin">

    <TextView
        android:id="@+id/fpaWebsiteHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/websiteHeading"
        android:textColor="@color/color2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fpaWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/color2"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/fpaEmailHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/websiteHeading"
        android:textColor="@color/color2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fpaEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/alegreya_bold"
        android:textColor="@color/color2"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/fpaNumberHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/fpa_phone_number"
        android:textColor="@color/color2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fpaNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/color2"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/fpaIgHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/instagram"
        android:textColor="@color/color2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fpaInstagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:textColor="@color/color2"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/fpatwitterHeading"
        android:fontFamily="@font/alegreya_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/twitterHeading"
        android:textColor="@color/color2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fpatwitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:textColor="@color/color2"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/fpaFacebookHeading"
        android:fontFamily="@font/alegreya_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/facebook"
        android:textColor="@color/color2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fpaFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:textColor="@color/color2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/fpaOpeningHoursHeading"
        android:fontFamily="@font/alegreya_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/fpa_opening_hours"
        android:textColor="@color/color2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fpaOpeningHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:textColor="@color/color2"
        android:textSize="18sp" />
</LinearLayout>