<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pageSocial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/standard_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/detailsAboutHeadingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:fontFamily="@font/alegreya"
        android:text="@string/about_us"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailsAboutTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:fontFamily="@font/alegreya"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsAboutHeadingTextView" />

    <TextView
        android:id="@+id/detailsPriceRangeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:fontFamily="@font/alegreya"
        android:text="@string/detail_price_range"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsAboutTextView" />

    <TextView
        android:id="@+id/detailsPriceRange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:fontFamily="@font/alegreya"
        app:layout_constraintTop_toBottomOf="@id/detailsPriceRangeHeader" />

    <TextView
        android:id="@+id/detailsServicesHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:fontFamily="@font/alegreya"
        android:text="@string/details_services"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsPriceRange" />

    <TextView
        android:id="@+id/detailsService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:fontFamily="@font/alegreya"
        app:layout_constraintTop_toBottomOf="@id/detailsServicesHeader" />


</androidx.constraintlayout.widget.ConstraintLayout>