<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pageAbout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/standard_margin">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/overviewWebsiteImageView"
        android:layout_width="@dimen/small_icon_width"
        android:layout_height="@dimen/small_icon_height"
        android:layout_margin="@dimen/standard_margin"
        android:src="@drawable/ic_earth_outline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/overviewWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:textColor="@color/color2"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/overviewWebsiteImageView"
        app:layout_constraintStart_toEndOf="@id/overviewWebsiteImageView"
        app:layout_constraintTop_toTopOf="@id/overviewWebsiteImageView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/overviewEmailImageView"
        android:layout_width="@dimen/small_icon_width"
        android:layout_height="@dimen/small_icon_height"
        android:layout_margin="@dimen/standard_margin"
        android:src="@drawable/ic_email_outline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overviewWebsiteImageView" />

    <TextView
        android:id="@+id/overviewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:fontFamily="@font/alegreya_bold"
        android:textColor="@color/color2"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/overviewEmailImageView"
        app:layout_constraintStart_toEndOf="@id/overviewEmailImageView"
        app:layout_constraintTop_toTopOf="@id/overviewEmailImageView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/overviewNumberImageView"
        android:layout_width="@dimen/small_icon_width"
        android:layout_height="@dimen/small_icon_height"
        android:layout_margin="@dimen/standard_margin"
        android:src="@drawable/ic_iphone_outline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overviewEmailImageView" />

    <TextView
        android:id="@+id/overviewNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:textColor="@color/color2"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/overviewEmailImageView"
        app:layout_constraintStart_toEndOf="@id/overviewEmailImageView"
        app:layout_constraintTop_toTopOf="@id/overviewEmailImageView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/overviewInstagramImageView"
        android:layout_width="@dimen/small_icon_width"
        android:layout_height="@dimen/small_icon_height"
        android:layout_margin="@dimen/standard_margin"
        android:src="@drawable/ic_instagram_new_outline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overviewNumberImageView" />

    <TextView
        android:id="@+id/overviewInstagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:textColor="@color/color2"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/overviewInstagramImageView"
        app:layout_constraintStart_toEndOf="@id/overviewInstagramImageView"
        app:layout_constraintTop_toTopOf="@id/overviewInstagramImageView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/overviewTwitterImageView"
        android:layout_width="@dimen/small_icon_width"
        android:layout_height="@dimen/small_icon_height"
        android:layout_margin="@dimen/standard_margin"
        android:src="@drawable/ic_twitter_outline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overviewInstagramImageView" />

    <TextView
        android:id="@+id/overviewTwitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:textColor="@color/color2"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/overviewTwitterImageView"
        app:layout_constraintStart_toEndOf="@id/overviewTwitterImageView"
        app:layout_constraintTop_toTopOf="@id/overviewTwitterImageView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/overviewFacebookImageView"
        android:layout_width="@dimen/small_icon_width"
        android:layout_height="@dimen/small_icon_height"
        android:layout_margin="@dimen/standard_margin"
        android:src="@drawable/ic_facebook_outline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overviewTwitterImageView" />

    <TextView
        android:id="@+id/overviewFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="@dimen/small_margin"
        android:textColor="@color/color2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/overviewFacebookImageView"
        app:layout_constraintStart_toEndOf="@id/overviewFacebookImageView"
        app:layout_constraintTop_toTopOf="@id/overviewFacebookImageView" />

    <TextView
        android:id="@+id/overviewListingAddressHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:fontFamily="@font/alegreya_bold"
        android:text="Location"
        android:textColor="@color/color2"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overviewFacebookImageView" />

    <TextView
        android:id="@+id/listingAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color2"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overviewListingAddressHeading" />

    <TextView
        android:id="@+id/listingCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color2"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/listingAddress"
        app:layout_constraintTop_toBottomOf="@id/listingAddress" />

    <TextView
        android:id="@+id/listingPostcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color2"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/listingCity"
        app:layout_constraintTop_toBottomOf="@id/listingCity" />

    <TextView
        android:id="@+id/overviewOpeningHoursHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/fpa_opening_hours"
        android:textColor="@color/color2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listingPostcode" />

    <TextView
        android:id="@+id/overviewOpeningHours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:fontFamily="@font/alegreya"
        android:textColor="@color/color2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overviewOpeningHoursHeading" />

    <TextView
        android:id="@+id/overviewEventsHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/summary_upcoming_events_heading"
        android:textColor="@color/color2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overviewOpeningHours" />

    <TextView
        android:id="@+id/overviewEvents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/no_upcoming_events"
        android:textColor="@color/color2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overviewEventsHeading" />

    <TextView
        android:id="@+id/overviewOfferHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/offers"
        android:textColor="@color/color2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overviewEvents" />

    <TextView
        android:id="@+id/overviewOffers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/no_results_found"
        android:textColor="@color/color2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overviewOpeningHoursHeading" />
</androidx.constraintlayout.widget.ConstraintLayout>